--- a/src/Pages/DetailsHouse/style.css
+++ b/src/Pages/DetailsHouse/style.css
@@ -1,92 +1,195 @@
-
-
-
-
 .root{
-    display: 'flex';
-    flex-direction: column;
-   justify-content: flex-start;
-   align-items: center;
-    margin: '3em auto';
-    color: black;
-    width: 80%;
-    padding: '0';
-    border: 1px solid #c7c7c7;
-    min-height: 600px;
-  }
+  display: flex;
+  flex-direction: row;
+ justify-content: flex-start;
+ align-items: center;
+  margin: 8em auto;
+  color: black;
+  width: 80%;
+  min-height: 600px;
+}
 
 
-  .alertBox{
-    margin-block: 3em;
-    width: 400px;
+.imageBox{
+  overflow: hidden;
+  width: 100%;
+  height: 500px;
  }
 
- .imgSection{
-    display: flex;
-        align-items: center;
-   }
+ .imageBox img{
+  width: 100%;
+  padding: 20;
+  height: 100%;
+  object-fit: cover;
+ }
 
-   .imageBox{
-    overflow: hidden;
-    width: 100%;
-    height: 600px;
-   }
 
-   .imageBox img{
-    width: 100%;
-    padding: 20;
-    height: 100%;
-    object-fit: cover;
-   }
+ .title{
+  font-size: 1em;
+  padding-top: 1em;
+ padding-bottom: 0.5em;
+  color: #2A5555;
+  text-transform: uppercase;
+  font-weight: bold;
+ }
 
-   .desc{
-    padding: 3em;
-    color: #7D7D7D;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-   }
 
-   .desc h2{
-    font-size: 2em;
-    padding-top: 1em;
-   padding-bottom: 1em;
-    color: red;
-   }
+ .city{
+  font-size: 1em;
+  color: #7D7D7D;
+ }
 
-   .priceDetails{
-    display:flex;
-    justify-content: space-between;
-    flex-direction: row;
-   padding-bottom: 1em;
-    width: 70%;
-  }
+.loaction svg {
+  font-size: 2.5em;
+  color: #2A5555;
+}
 
-  .priceDetails span{
-    display:flex;
-  }
+.loaction{
+  padding-top: 2em;
+  padding-bottom: 1em;
+  display: flex;
+  align-items: center;
+}
+
+.room {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1em;
+}
+
+.bedroom{
+  display: flex;
+  align-items: center;
+}
+
+.num {
+  font-size: 1.5em;
+  color: #7D7D7D;
+}
+
+.priceDetails{
+  padding-top: 0.5em;
+  color: #7D7D7D;
+}
+
+.type{
+  padding-top: 0.5em;
+  color: #2A5555;
+}
+
+.descDetails {
+  width: 30em;
+  padding-top: 0.5em;
+  padding-bottom: 1em;
+  color: #7D7D7D;
+}
+
+.name {
+  display: flex;
+  align-items: center;
+  padding-top: 0.5em;
+  color: white;
+}
+
+.name svg {
+  font-size: 2em;
+  color: #EB9235;
+  padding-right: 0.5em;
+}
+
+
+.descAddress {
+  width: 280px;
+  height: 280px;
+  border-radius: 25px;
+  background-color: #2A5555;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+/* 
+
+
+
+
+.alertBox{
+  margin-block: 3em;
+  width: 400px;
+}
+
+.imgSection{
+  display: flex;
+  align-items: center;
+ }
+
+ .imageBox{
+  overflow: hidden;
+  width: 100%;
+  height: 500px;
+ }
+
+ .imageBox img{
+  width: 100%;
+  padding: 20;
+  height: 100%;
+  object-fit: cover;
+ }
+
+ .desc{
+  color: #7D7D7D;
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+ }
+
+ .desc h2{
+  font-size: 2em;
+  padding-top: 1em;
+ padding-bottom: 1em;
+  color: red;
+ }
+
+.loaction{
+  padding-bottom: 1em;
+  display: flex;
+  flex-direction: row;
+  margin-right: 2.5em;
+}
+
+ .priceDetails{
+  display:flex;
+  justify-content: space-between;
+  flex-direction: row;
+ padding-bottom: 1em;
+  width: 70%;
+}
+
+.priceDetails span{
+  display:flex;
+}
 .descDetails{
-    padding: 1em 0;
-    width: 85%;
+  padding: 1em 0;
+  width: 85%;
 }
 
 .descAddress p {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 .descAddress svg {
-    margin-right: 10px;
-    vertical-align: middle;
+  margin-right: 10px;
+  vertical-align: middle;
 }
 
 .descBtn {
-       margin: 4em auto;
-        margin-bottom: 0;
-         display: flex;
-         justify-content: space-around;
-         width: 80%;
-         flex-wrap: wrap;
+     margin: 4em auto;
+      margin-bottom: 0;
+       display: flex;
+       justify-content: space-around;
+       width: 80%;
+       flex-wrap: wrap;
 }
 
 .descBtn button{
@@ -95,27 +198,25 @@ font-weight: bold;
 
 
 .backLink{
-    background-color: #F5F5F5;
-    border: 1px solid red;
-    color: red;
-   text-decoration: none;
-    text-align: center;
-    width: 120px;
-    line-height: 27px;
-    padding: 0.5em;
-    border-radius: 3px;
-    font-weight: bold;
-    transition: all 0.25s;
-    box-shadow:
-      0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
+  background-color: #F5F5F5;
+  border: 1px solid red;
+  color: red;
+ text-decoration: none;
+  text-align: center;
+  width: 120px;
+  line-height: 27px;
+  padding: 0.5em;
+  border-radius: 3px;
+  font-weight: bold;
+  transition: all 0.25s;
+  box-shadow:
+    0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
 }
 
 .backLink:hover {
-    background-color: #F5F5F5;
-    border: 1px solid black;
-    color: #F5F5F5;
-    transition: all 0.25s;
+  background-color: #F5F5F5;
+  border: 1px solid black;
+  color: #F5F5F5;
+  transition: all 0.25s;
 
-}
-
-
+} */
