--- a/src/Components/Card/style.css
+++ b/src/Components/Card/style.css
@@ -1,107 +1,36 @@
-.card {
-  border: 1px solid #7D7D7D;
-  font-family: 'Roboto', sans-serif;
+.cardActions{
+  display: flex;
+  justify-content: space-around;
 }
 
-
-.media {
-  max-height: 200px;
-  height: 200px;
-  overflow: hidden;
+.CardContent{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
-.media img {
-  width: 364px;
-  object-fit: cover;
+.detailsCardBox{
+  display: flex;
+  justify-content: start;
+  gap: 10px;
 }
 
+.detailsCard{
+  display: flex;
+  align-items: center;
+}
 
-.detailsLink {
+.CardContentTitle{
+  display: flex;
+  justify-content: space-between;
+}
+
+.detailsLink{
+  width: 62%;
   background-color: #EB9235;
-  border: 1px solid #EB9235;
-  color: white;
+  color: #fff;
+  padding: 9px 10px;
+  border-radius: 5px;
   text-decoration: none;
   text-align: center;
-  padding: 0.5em;
-  border-radius: 3px;
-  transition: all 0.25s;
-}
-
-.favorite {
-  color: #7D7D7D;
-}
-
-.cardaction {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.cardTitle {
-  color: #2A5555;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-
-.description {
-  padding-top: 0.5em;
-  font-size: 1.4em;
-  color: #7D7D7D;
-}
-
-.cardDetails {
-  padding-top: 0.5em;
-  color: #2A5555;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.cardDetails h6 {
-  font-weight: bold;
-}
-
-.iconBox {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.oneiconBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-}
-
-.iconBox p {
-  padding-top: 6px;
-}
-
-.location {
-  font-size: 12px;
-  color: #7D7D7D;
-}
-
-.icon {
-  color: #2A5555;
-  margin-left: 5px;
-  vertical-align: middle;
-}
-
-.houseType {
-  padding-top: 1em;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #2A5555;
-}
-
-
-.blueText {
-  font-weight: normal;
-  color: #7D7D7D;
-  font-size: 1em;
 }
