--- a/src/Pages/Profile/SideBar/style.css
+++ b/src/Pages/Profile/SideBar/style.css
@@ -2,32 +2,35 @@
   display: flex;
   height: 800px;
   background-color: #ffffff;
+  padding-top: 7em;
 }
 
 .tabs {
   background-color: #2a5555;
   max-width: 100%;
-  display: "flex";
+  display: flex;
+  flex-direction: row;
+  padding-top: 2em;
 }
 
 .userAvatar {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 3em;
+  padding-top: 2.5em;
 }
 
 .userAvatar h3 {
-  padding-top: 1.5em;
-  padding-bottom: 1.8em;
+  padding-top: 1em;
+  padding-bottom: 1em;
   font-size: 1.5em;
   color: #f5f5f5;
 }
 
+
 .sideBarContainer {
-  width: 400px;
+  width: 350px;
   background-color: #2a5555;
 }
 
@@ -37,30 +40,25 @@
   height: 80vh;
 }
 
-.avatar {
-  width: 3em;
-  height: 3em;
-  background-color: #a52525;
+.css-aym9vq-MuiButtonBase-root-MuiTab-root>.MuiTab-iconWrapper{
+  color: #EB9235 !important;
 }
 
-.tab {
-  text-align: left;
+.css-aym9vq-MuiButtonBase-root-MuiTab-root.Mui-selected{
   display: flex;
-  text-transform: none;
-  min-height: 2em;
-  border-bottom: 1px solid #f5f5f5;
+  flex-direction: row;
+  color: white !important;
 }
 
-.tab span {
-  display: inline;
-  color: #f5f5f5;
-  font-size: 1em;
-  padding: 0em 1.2em;
+.css-aym9vq-MuiButtonBase-root-MuiTab-root{
+  display: flex !important;
+  flex-direction: row !important;
+  gap: 20px;
+  color: white !important;
+  border-bottom: 1px solid #ABABAB !important;
 }
 
-.tab svg {
-  margin-bottom: -6px !important;
-  width: 1.2em;
-  height: 1.2em;
-  margin-right: 10px;
+.css-10d9dml-MuiTabs-indicator {
+  background-color:#EB9235 !important;
+  width: 6px !important;
 }
