--- a/src/Pages/Profile/style.css
+++ b/src/Pages/Profile/style.css
@@ -1,6 +1,10 @@
 
   .rootprofile{
-    width: 85%;
-    padding: 3em;
-    height: 900px;
+    width: 85%;  
+    padding-bottom: 2em;
+  }
+
+
+  .css-19kzrtu {
+    padding-top: 0px !important;
   }
