--- a/src/Pages/Profile/SideBar/style.css
+++ b/src/Pages/Profile/SideBar/style.css
@@ -13,6 +13,13 @@
   padding-top: 2em;
 }
 
+.tab {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start !important;
+}
+
+
 .userAvatar {
   display: flex;
   flex-direction: column;
