--- a/src/Pages/Profile/style.css
+++ b/src/Pages/Profile/style.css
@@ -8,3 +8,11 @@
   .css-19kzrtu {
     padding-top: 0px !important;
   }
+
+  .css-19kzrtu {
+    padding-left: 4em !important;
+  }
+
+  .css-1nrlq1o-MuiFormControl-root {
+    padding: 24px !important;
+  }
