--- a/src/Pages/Houses/style.css
+++ b/src/Pages/Houses/style.css
@@ -46,3 +46,59 @@
   align-items: center;
 }
 
+.css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
+  border-radius: 25px !important;
+  width: 100% !important;
+}
+
+.containerhero {
+  padding-top: 4em !important;
+}
+
+.containerhero span {
+  color: #EB9235 !important;
+}
+
+.css-187mznn-MuiSlider-root {
+  color:#7D7D7D !important;
+}
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 768px) {
+  .hero-searchInput{
+    width:100%;
+    padding: 13px;
+  }
+
+  .serach-btn{
+    right:0px;
+    bottom: 0px;
+  }
+  .filter {
+    padding-top: 2em;
+    flex-direction: column;
+  }
+  .css-1yk1gt9-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
+    width: 100% !important;
+  }
+  
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  .hero-searchInput{
+    width:70%;
+    padding: 13px;
+  }
+
+  .serach-btn{
+    right:120px;
+    bottom: 0px;
+  }
+}
