--- a/src/Components/Loading/style.css
+++ b/src/Components/Loading/style.css
@@ -3,6 +3,6 @@
 .box {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100vh;
 }
