--- a/src/Pages/Login/style.css
+++ b/src/Pages/Login/style.css
@@ -38,3 +38,7 @@ h2 {
 .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
 border-radius: 25px !important;
 }
+
+.error {
+  color:  red !important;
+}
